2004-06-15  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS:

	Added Pascal.

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- The dialog is now automatically resized according to the selected criterion ;
	- Performs the search when 'enter' is pressed in the title entry ;
	- Performs the add when a double left click is detected on a result row ;
	- Fixed some small UI issues.

	* lib/alexandria/ui/main_app.rb:
		
	Sorts the current library after a book has been added.

2004-06-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	Modified to allow title searches (as well as ISBN searches). 

2004-06-14  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria.rb, lib/alexandria/book.rb,
	  lib/alexandria/ui/about_dialog.rb, lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb, lib/alexandria/ui/preferences_dialog.rb:

	Enforce use of UTF-8 for gettext

2004-06-14  Laurent Sansonetti  <lrz@gnome.org>

	* data/.cvsignore: 

	Added.

2004-06-14  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/ui/main_app.rb:

	Ngettextise some strings.

	* po/ChangeLog:

	New ChangeLog for translation changes.

2004-06-13  Laurent Sansonetti  <lrz@gnome.org>

	* data/post-clean.rb:

	Added.  This script removes the 'locale' directory.
	
2004-06-13  Dafydd Harries  <daf@muse.19inch.net>

	* pre-setup.rb:

	Removed requirement of ruby-gettext since all this  does is run
	msgfmt.

=== Alexandria 0.2.0 ===

2004-06-13  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Final update for 0.2.0.

	* lib/alexandria.rb,
	  lib/alexandria/book.rb:

	- extend the GetText module (thanks to Masao Mutoh) ;
	- added translator names for the about box.

	* AUTHORS: updated and reformatted.

2004-06-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* po/ja.po:

	New Japanese translation.

2004-06-12  Dafydd Harries  <daf@muse.19inch.net>
