@@ -26,13 +26,14 @@ module Alexandria
     AUTHORS = [
         'Dafydd Harries <daf@muse.19inch.net>',
         'Laurent Sansonetti <lrz@gnome.org>',
+        'Pascal Terjan <pterjan@linuxfr.org>',
         'Zachary P. Landau <kapheine@hypa.net>'
     ]
     DOCUMENTERS = [ 'Laurent Sansonetti <lrz@gnome.org>' ]  
     TRANSLATORS = [ 
-        'Dafydd Harries <daf@muse.19inch.net>',
-        'Laurent Sansonetti <lrz@gnome.org>',
-        'Masao Mutoh <mutoh@highway.ne.jp>'
+        'Dafydd Harries <daf@muse.19inch.net> (cy)',
+        'Laurent Sansonetti <lrz@gnome.org> (fr)',
+        'Masao Mutoh <mutoh@highway.ne.jp> (ja)'
     ]
     LIST = 'alexandria-list@rubyforge.org'
     BUGREPORT_URL = 'http://rubyforge.org/tracker/?func=add&group_id=205&atid=863'
